# taila

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  docker-compose.yml  pyproject.toml
notebooks/: 01-ai-tutor-llm.ipynb  01-openai-api-client.ipynb  02-prompt-engineering.ipynb  03-prompt-eval.ipynb  05-llamaindex-rag-basic.ipynb  06-vector-db.ipynb
scripts/: mini_llama_download.sh
src/taila/: __init__.py
src/taila/clienits/: oai_chat.py
src/taila/utils/: data_reader.py  model_catalog.py  notebook_setting.py  settings.py
