[project]
name = "taila"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MrDataPsycho", email = "mr.data.psycho@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-openai>=0.3.28",
    "llama-index>=0.12.52",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-vector-stores-chroma>=0.4.2",
    "openai>=1.93.0",
    "pydantic-settings>=2.10.1",
    "tenacity>=9.1.2",
]

[project.scripts]
taila = "taila:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]
